--- a/aboutus.html
+++ b/aboutus.html
@@ -20,12 +20,11 @@
 
   <div id="menu"> 
     <ul>
-      <li><a href="#" title="">HOME</a></li>
-      <li><a href="#" title="">ABOUT US</a></li>
-      <li><a href="#" title="">NEWS</a></li>
-      <li><a href="#" title="">CONTACT US</a></li>
-      <li><a href="#" title="">LINKS</a></li>
-
+      <li><a href="http://wvaughansc.github.io/index.html" title="">HOME</a></li>
+      <li><a href="http://wvaughansc.github.io/aboutus.html" title="">ABOUT US</a></li>
+      <li><a href="http://wvaughansc.github.io/services.html" title="">NEWS</a></li>
+      <li><a href="http://wvaughansc.github.io/contactus.html" title="">CONTACT US</a></li>
+      <li><a href="http://wvaughansc.github.io/relatedlinks.html" title="">LINKS</a></li>
     </ul>
   </div>
 
