--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -22,7 +22,7 @@
     <ul>
       <li><a href="http://wvaughansc.github.io/index.html" title="">HOME</a></li>
       <li><a href="http://wvaughansc.github.io/aboutus.html" title="">ABOUT US</a></li>
-      <li><a href="http://wvaughansc.github.io/services.html" title="">NEWS</a></li>
+      <li><a href="http://wvaughansc.github.io/services.html" title="">OUR SERVICES</a></li>
       <li><a href="http://wvaughansc.github.io/contactus.html" title="">CONTACT US</a></li>
       <li><a href="http://wvaughansc.github.io/relatedlinks.html" title="">LINKS</a></li>
 
