Added logo to main page

--- a/contactus.html
+++ b/contactus.html
@@ -15,7 +15,7 @@
 <div id="container"> 
 
   <div id="header">
-    <div class="headtitle">About Us</div>
+    <div class="headtitle">Contact Us</div>
   </div>
 
   <div id="menu"> 
