--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <div id="content"> 
 
     <div id="insidecontent"> <br>
+        
+      <img src="logo.jpg">
       <h1>Welcome</h1>
 
       <p>
