--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -15,7 +15,7 @@
 <div id="container"> 
 
   <div id="header">
-    <div class="headtitle">About Us</div>
+    <div class="headtitle">Related Links</div>
   </div>
 
   <div id="menu"> 
