--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
 <div id="container"> 
 
   <div id="header">
-    <div class="headtitle">About Us</div>
+    <div class="headtitle">Our Services</div>
   </div>
 
   <div id="menu"> 
