--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div id="insidecontent"> <br>
         
-      <img src="logo.jpg">
+      <img src="logo.jpg" align="middle">
       <h1>Welcome</h1>
 
       <p>
