--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <div id="container"> 
 
   <div id="header">
-    <div class="headtitle">LocalGreenvilleShows.com</div>
+            <img src="logo.jpg" align="middle">
+   <!-- <div class="headtitle">LocalGreenvilleShows.com</div> -->
   </div>
 
   <div id="menu"> 
@@ -34,7 +35,7 @@
 
     <div id="insidecontent"> <br>
         
-      <img src="logo.jpg" align="middle">
+
       <h1>Welcome</h1>
 
       <p>
