--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <div id="container"> 
 
   <div id="header">
-            <img src="logo.jpg" align="middle">
-   <!-- <div class="headtitle">LocalGreenvilleShows.com</div> -->
+    <div class="headtitle">LocalGreenvilleShows.com</div>
   </div>
 
   <div id="menu"> 
@@ -35,7 +34,7 @@
 
     <div id="insidecontent"> <br>
         
-
+     <center><img src="logo.jpg"></center> 
       <h1>Welcome</h1>
 
       <p>
