--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 
 <div id="container"> 
 
-  <div id="header">
-    <div class="headtitle">LocalGreenvilleShows.com</div>
-  </div>
-
   <div id="menu"> 
     <ul>
       <li><a href="http://wvaughansc.github.io/index.html" title="">HOME</a></li>
@@ -34,7 +30,7 @@
 
     <div id="insidecontent"> <br>
         
-     <center><img src="logo.jpg"></center> 
+     <center><img src="logo.jpg" height=150px width=400px></center> 
       <h1>Welcome</h1>
 
       <p>
