--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <div id="container"> 
 
+  <div id="header">
+    <div class="headtitle"></div>
+  </div>
+
   <div id="menu"> 
     <ul>
       <li><a href="http://wvaughansc.github.io/index.html" title="">HOME</a></li>
