--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
 
 <div id="container"> 
 
-  <div id="header">
+  <div id="header">  
     <div class="headtitle">About Us</div>
   </div>
 
@@ -32,6 +32,7 @@
   <div id="content"> 
 
     <div id="insidecontent"> <br>
+             <center><img src="logo.jpg"></center> 
       <h1>Why We Exist</h1>
 
       <p>
@@ -52,6 +53,8 @@ As far as expenses go, the costs to run LocalShows.com will be very low. Because
     <div style="clear: both;"></div>
   </div>
 
+         <center><img src="logo.jpg"></center> 
+    
   <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
   </div>
 
