--- a/contactus.html
+++ b/contactus.html
@@ -33,6 +33,7 @@
   <div id="content"> 
 
     <div id="insidecontent"> <br>
+           <center><img src="logo.jpg"></center> 
       <h1>Contact Us</h1>
 
       <p>
@@ -56,6 +57,8 @@
     <div style="clear: both;"></div>
   </div>
 
+         <center><img src="logo.jpg"></center> 
+    
   <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
   </div>
 
