--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <div style="clear: both;"></div>
   </div>
 
+         <center><img src="logo.jpg"></center> 
+    
   <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
   </div>
 
