--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -33,6 +33,7 @@
   <div id="content"> 
 
     <div id="insidecontent"> <br>
+             <center><img src="logo.jpg"></center> 
       <h1>Our Services</h1>
 
       <p>
@@ -51,6 +52,8 @@
     <div style="clear: both;"></div>
   </div>
 
+         <center><img src="logo.jpg"></center> 
+    
   <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
   </div>
 
