--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -33,14 +33,13 @@
   <div id="content"> 
 
     <div id="insidecontent"> <br>
-             <center><img src="logo.jpg"></center> 
       <h1>Our Services</h1>
 
       <p>
 	       <ul>
                 <li><a href="http://www.maps.google.com">Google Maps (for finding where your're going)</a></li> 
-                <li></li>
-                <li></li>
+                <li><a href="http://www.spotify.com">Spotify (to find new music)</a></li>
+                <li><a href="http://www.soundcloud.com">SoundCloud (find local artists)</a></li>
                 <li></li>
            </ul>      
 	 
