fixed the alignment of images

--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
   <div id="content"> 
 
     <div id="insidecontent"> <br>
-             <center><img src="logo.jpg"></center> 
+             <p align=center><img src="logo.jpg"></p>
       <h1>Why We Exist</h1>
 
       <p>
@@ -52,7 +52,7 @@ As far as expenses go, the costs to run LocalShows.com will be very low. Because
     </div>
     <div style="clear: both;"></div>
       
-           <center><img src="logo.jpg"></center> 
+           <p align=center><img src="logo.jpg"></p> 
   </div>
     
   <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
