--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -49,7 +49,7 @@
 	  </p>
     </div>
     <div style="clear: both;"></div>
-         <center><img src="logo.jpg"></center> 
+         <p align=center><img src="logo.jpg"></p>
   </div>
 
     
