--- a/contactus.html
+++ b/contactus.html
@@ -33,7 +33,7 @@
   <div id="content"> 
 
     <div id="insidecontent"> <br>
-           <center><img src="logo.jpg"></center> 
+           <p align=center><img src="logo.jpg"></p>
       <h1>Contact Us</h1>
 
       <p>
@@ -56,7 +56,7 @@
     </div>
     <div style="clear: both;"></div>
     
-     <center><img src="logo.jpg"></center>     
+     <p align=center><img src="logo.jpg"></p>    
   </div>
 
     
