--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div id="insidecontent"> <br>
         
-     <center><img src="logo.jpg"></center> 
+     <p align=center><img src="logo.jpg"></p>
       <h1>Welcome</h1>
 
       <p>
@@ -52,7 +52,7 @@
 	  </p>
     </div>
     <div style="clear: both;"></div>
-           <center><img src="logo.jpg"></center> 
+           <p align=center>img src="logo.jpg"><</p>
   </div>
     
   <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
