--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
 
     <div id="insidecontent"> <br>
         
-             <center><img src="logo.jpg"></center> 
+             <p align=center><img src="logo.jpg"></p>
         
       <h1>Our Services</h1>
 
@@ -68,7 +68,7 @@
 	  </p>
     </div>
     <div style="clear: both;"></div>
-         <center><img src="logo.jpg"></center> 
+         <p align=center><img src="logo.jpg"></p>
   </div>
 
 
