--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	  </p>
     </div>
     <div style="clear: both;"></div>
-           <p align=center>img src="logo.jpg"><</p>
+           <p align=center><img src="logo.jpg"><</p>
   </div>
     
   <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
