--- a/aboutus.html
+++ b/aboutus.html
@@ -53,7 +53,7 @@ As far as expenses go, the costs to run LocalShows.com will be very low. Because
            <p align=center><img src="logo.jpg"></p> 
   </div>
     
-  <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
+  <div id="footer"> <span>Made by Will Vaughan for INFO 415  </span> 
   </div>
 
 </div>
