--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="container"> 
 
   <div id="header">
-    <div class="headtitle"></div>
+    <div class="headtitle">LocalShows.com</div>
   </div>
 
   <div id="menu"> 
@@ -50,10 +50,10 @@
 	  </p>
     </div>
     <div style="clear: both;"></div>
-           <p align=center><img src="logo.jpg"><</p>
+           <p align=center><img src="logo.jpg"></p>
   </div>
     
-  <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
+  <div id="footer"> <span>Made by Will Vaughan for INFO 415  </span> 
   </div>
 
 </div>
