--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -52,7 +52,7 @@
   </div>
 
     
-  <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
+  <div id="footer"> <span>Made by Will Vaughan for INFO 415  </span> 
   </div>
 
 </div>
