--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
   </div>
 
 
-  <div id="footer"> <span>Copyright © 2014 | All Rights Reserved  </span> 
+  <div id="footer"> <span> Made by Will Vaughan for INFO 415  </span> 
   </div>
 
 </div>
