--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div id="container"> 
-
+           <p align=center><img src="logo.jpg"></p>
   <div id="header">
     <div class="headtitle">LocalShows.com</div>
   </div>
