let's see how the top logo looks on all the pages

--- a/relatedlinks.html
+++ b/relatedlinks.html
@@ -31,7 +31,7 @@
 
 
   <div id="content"> 
-
+    <p align=center><img src="logo.jpg"></p>
     <div id="insidecontent"> <br>
       <h1>Our Services</h1>
 
