--- a/aboutus.html
+++ b/aboutus.html
@@ -14,6 +14,8 @@
 
 <div id="container"> 
 
+  <p align=center><img src="logo.jpg"></p>    
+    
   <div id="header">  
     <div class="headtitle">About Us</div>
   </div>
