--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 <body>
 
 <div id="container"> 
-
+  <p align=center><img src="logo.jpg"></p>
   <div id="header">
     <div class="headtitle">Our Services</div>
   </div>
