added top logo and edited text wording

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div id="container"> 
-  <p align=center><img src="logo.jpg"></p>
+  <p align=center><img src="logo_top.jpg"></p>
   <div id="header">
     <div class="headtitle">LocalShows.com</div>
   </div>
@@ -36,9 +36,9 @@
       <h1>Welcome</h1>
 
       <p>
-	  Localshows.com provides a connection between music venues and music lovers. For a small fee, venues can post their show schedule on the website. Music lovers can then visit the website to search for show’s around them, or set up updates so that our service will email them notifications new shows posted in their area at a frequency that the user specifies. The website is also able to make suggestions based on which shows and musicians that you are interested in. The true product that we are selling is show listing to venues.
+	  Localshows.com provides a connection between music venues and music lovers. Are you a small music venue? For a small fee, you can post your show schedule on the website. Music lovers can then visit the website to search for show’s around them, or set up updates so that our service will email them notifications when new shows are posted in their area at a frequency that the user specifies. Localshows.com is also able to make suggestions based on which shows and musicians that you are interested in. 
 <br><br>
-          A common problem of many music lovers is keeping up with the numerous shows in their area. Music lovers miss out on opportunity after opportunity because there is not a common repository for them to check for local shows. By using LocalShows.com, music lovers can ensure that they never feel that disappointment again. Not only will they never forget or miss their favorite artists shows around them, but them will also be able to discover new music in their area. 
+          A common problem of many music lovers is keeping up with the numerous shows in their area. Music lovers miss out on opportunity after opportunity because there is not a common repository for them to check for local shows. By using LocalShows.com, you can ensure that you never feel that disappointment again. Not only will you never forget or miss your favorite artist's shows around you, but you will also be able to discover new music in their area. 
 
 	 <br><br>
 	  </p>
