fix top logo on all pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
 
 <div id="container"> 
 
-  <p align=center><img src="logo.jpg"></p>    
+  <p align=center><img src="logo_top.jpg"></p>    
     
   <div id="header">  
     <div class="headtitle">About Us</div>
