added shows pages

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="http://wvaughansc.github.io/services.html" title="">OUR SERVICES</a></li>
       <li><a href="http://wvaughansc.github.io/contactus.html" title="">CONTACT US</a></li>
       <li><a href="http://wvaughansc.github.io/relatedlinks.html" title="">LINKS</a></li>
+      <li><a href="http://wvaughansc.github.io/shows.html" title="">UPCOMING SHOWS</a></li>
 
     </ul>
   </div>
