--- a/shows.html
+++ b/shows.html
@@ -33,7 +33,7 @@
   <div id="content"> 
     <div id="insidecontent"> <br>
         
-      <h1>Our Services</h1>
+      <h1>Upcoming Shows</h1>
 
       <p>
 	       <ul>
