--- a/shows.html
+++ b/shows.html
@@ -15,7 +15,7 @@
 <div id="container"> 
   <p align=center><img src="logo_top.jpg"></p>
   <div id="header">
-    <div class="headtitle">Our Services</div>
+    <div class="headtitle">Upcoming Shows</div>
   </div>
 
   <div id="menu"> 
