add menu to bottom

--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
            <p align=center><img src="logo.jpg"></p>
   </div>
     
+  <div id="menu"> 
+    <ul>
+      <li><a href="http://wvaughansc.github.io/index.html" title="">HOME</a></li>
+      <li><a href="http://wvaughansc.github.io/aboutus.html" title="">ABOUT US</a></li>
+      <li><a href="http://wvaughansc.github.io/services.html" title="">OUR SERVICES</a></li>
+      <li><a href="http://wvaughansc.github.io/contactus.html" title="">CONTACT US</a></li>
+      <li><a href="http://wvaughansc.github.io/relatedlinks.html" title="">LINKS</a></li>
+      <li><a href="http://wvaughansc.github.io/shows.html" title="">UPCOMING SHOWS</a></li>
+    </ul>
+  </div>    
+    
   <div id="footer"> <span>Made by Will Vaughan for INFO 415  </span> 
   </div>
 
